# HEBO

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENCE.md  LICENSE  README.md  THIRD_PARTY_OPEN_SOURCE_SOFTWARE_NOTICE.md  dresd.py  ds_zero.json  embed_data.py  eval.sh  evaluate.py  gen_data.py  index.py  infer.py  merge.py  merge.sh  pca.py  requirements.txt  sample.sh  setup.py  spec_dec_base.py  spec_dec_dresd.py  train.py  train.sh
AIRBO/: .gitignore  (+2 more)
Agent/: .env.example  .gitignore  .pre-commit-config.yaml  .project-root  LICENSE.md  README.md  environment.yml  printdata.py  pyproject.toml  run_agent.sh  runme.py  virtual-packages.yml
Agent/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
Agent/.github/workflows/: build_docs.yml  test.yml
Agent/configs/: default_notebooks.yaml  default_sa_eval.yaml  default_sa_train_rlft.yaml  default_sa_train_sft.yaml  think_and_code_llm_sa_eval.yaml
Agent/configs/agent/: default.yaml  train.yaml
Agent/configs/agent/commands/: default.yaml
Agent/configs/agent/memory/: default.yaml
Agent/configs/agent/prompt_builder/: default.yaml
Agent/configs/extras/: default.yaml
Agent/configs/hydra/: default.yaml  parallel.yaml
Agent/configs/llm/: deepseek.yaml  distributed_hf.yaml  fschat.yaml  hf.yaml  human.yaml  llm_playground.yaml  openai.yaml  random.yaml
Agent/configs/llm/fschat/: deepseek-6.7b.yaml  llama-13b.yaml  llama-70b.yaml  mistral-7b.yaml  mixstral.yaml  openchat_3.2.yaml  openchat_3.5.yaml  openchat_3.5_embeddings.yaml  phi2.yaml  vicuna-13b.yaml  zyte1b.yaml
Agent/configs/llm/hf/: llama-7b.yaml  openchat_3.5.yaml
Agent/configs/llm/llm_playground/: codestral-22b.yaml  llama3-70b.yaml  qwen2-72b-long.yaml  qwen2-72b.yaml
Agent/configs/llm/openai/: gpt3.5.yaml  gpt3.5_embeddings.yaml  gpt4.yaml
Agent/configs/logger/: api_usage_logger.yaml  default.yaml  file_logger.yaml  stdout_logger.yaml  training_data.yaml
Agent/configs/method/: direct-hyperopt.yaml  direct-rosllm.yaml  direct-with-tool.yaml  direct.yaml  fs-cot-react.yaml  fs-cot-reflect.yaml  fs-cot-sc.yaml  fs-cot-zerostep-reflect.yaml  fs-cot.yaml  fs-least2most.yaml  fs-with-tool.yaml  fs.yaml  fs_cot_with_google_search.yaml  fs_cot_with_rag.yaml  zs-cot.yaml
Agent/configs/sweep/: sweep1.yaml  sweep2.yaml  sweep3.yaml  sweep4.yaml  sweep5.yaml
Agent/configs/task/: alfworld.yaml  alfworld_chat.yaml  babyai.yaml  babyai_chat.yaml  gsm8k.yaml  gsm8k_chat.yaml  hotpotqa.yaml  hotpotqa_db.yaml  humaneval.yaml  hyperopt.yaml  ros_task.yaml  rosllm.yaml  webshop.yaml  webshop_chat.yaml
Agent/configs/training/: reinforcement_learning.yaml  server_training.yaml  supervised.yaml
Agent/configs/training/dataset/: default.yaml  textworld.yaml
Agent/configs/training/deepspeed/: stage0.yaml
Agent/configs/training/peft/: lora.yaml
Agent/docs/: Dockerfile
Agent/docs/source/: advanced_topics.rst  api.md  conf.py  configuration.rst  flows.rst  index.rst  installation.rst  intrinsic_functions.rst  introduction.rst  llms.rst  memory.rst  methods.rst  output_parsing.rst  rl.rst  tasks.rst
Agent/notebooks/: agent-demo.ipynb
Agent/scripts/: convert_logs.py  finetune.py  get_reward_and_errors_script.py  process_results.py  publish_task.py  run-simple.sh  run_hyperopt.py  vllm_worker_dispatcher.py
Agent/scripts/hyperopt/: generate_results.py  run-simple.sh  run_hyperopt.py
Agent/src/agent/: __init__.py  agents.py  listener.py  memory.py  start.py  train_rlft.py  train_sft.py
Agent/src/agent/commands/: __init__.py  actions.py  composite.py  core.py  flows.py  hyperopt_custom_commands.py  simple_thoughts.py  summarizations.py  tool_use.py  trajectory_operations.py
Agent/src/agent/data_collection/: log_monitoring.py  log_processor.py
Agent/src/agent/loggers/: __init__.py  base.py  utils.py
Agent/src/agent/models/: __init__.py  distributed_hf.py  embeddings.py  fastchat_api.py  huggingface.py  llm.py  openai_api.py  stdin_llm.py
Agent/src/agent/parsers/: __init__.py  json.py  parser.py  simple.py
Agent/src/agent/prompts/: builder.py
Agent/src/agent/tasks/: __init__.py  alfworld.py  babyai.py  gsm8k.py  hotpotqa.py  humaneval.py  hyperopt.py  ros_api.py  ros_task.py  rosllm.py  tasks.py  webshop.py
Agent/src/agent/tools/: hyperopt_tool.py  python_interpreter.py
Agent/src/agent/train/: env_worker.py  models.py  ppo.py  reinforce.py  replay_buffer.py  utils.py  worker_distributed_hf.py
Agent/src/agent/utils/: __init__.py  hyperopt_utils.py  pylogger.py  rich_utils.py  utils.py
Agent/tests/: base_config.yaml  conftest.py  test_alfworld.py  test_configs.py  test_flows.py  test_llm_choose.py  test_log.py  test_memory.py  test_sc.py
Agent/tests/helpers/: package_available.py  run_if.py  run_sh_command.py
Agent/tests/prompts/: test_prompt_builder.py  webarena_test_template.jinja
Agent/tests/utils/: random_llm.py
Agent/tutorials/: create_new_llm.ipynb  create_new_method.ipynb  create_new_task.ipynb  using_agent.ipynb  using_hyperopt_tool.ipynb
Agent/tutorials/hyperopt_tutorial_files/: core.py  deepseek-coder-7b-instruct-v1.5.yaml  direct-hyperopt.yaml  external_action.jinja  flow_loop_continue.jinja  hyperopt.jinja  hyperopt.py  hyperopt_interact.yaml  hyperopt_tool.py  hyperopt_utils.py  memory.py  system_prompt.jinja
Agent/tutorials/old_notebooks/: SimpleBot.ipynb  prompting_guide.ipynb  simple_setup.ipynb
Agent/workspace/hyperopt/: README.md
ROSLLM/observation_manager/: CMakeLists.txt  README.md  package.xml
ROSLLM/observation_manager/config/: example.yaml
ROSLLM/observation_manager/launch/: test.launch
ROSLLM/observation_manager/scripts/: observation_manager_node
ROSLLM/observation_manager/test/: test_sensor_node
ROSLLM/ros_agent/: CMakeLists.txt  README.md  package.xml
ROSLLM/ros_agent/example/: agentactionservice.py  publish_time.py
ROSLLM/ros_agent/scripts/: command_window.py  ros_agent_node.py
ROSLLM/ros_agent/srv/: HandleAgentAction.srv
ROSLLM/rosllm_srvs/: CMakeLists.txt  package.xml
ROSLLM/rosllm_srvs/srv/: AtomicAction.srv  ExecuteBehavior.srv  GetUserInput.srv  LLM.srv  Observation.srv
(+1586 files in other folders)
