<?xml version="1.0"?>
<package format="2">
  <name>rosllm_srvs</name>
  <version>1.0.0</version>
  <description>The rosllm_srvs package</description>

  <maintainer email="christopher.mower@huawei.com">cmower</maintainer>
  <license>BSD</license>

  <author email="christopher.mower@huawei.com">cmower</author>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
